<resources>
    <string name="app_name">My Shopping List</string>

    <string name="app_action_product_created">com.chrumck.pjatk.myshoppinglist.PRODUCT_CREATED</string>
    <string name="app_action_product_edit">com.chrumck.pjatk.myshoppinglist.PRODUCT_EDIT</string>
    <string name="app_action_product_list">com.chrumck.pjatk.myshoppinglist.PRODUCT_LIST</string>

    <string name="app_permission_broadcast">com.chrumck.pjatk.myshoppinglist.permission.BROADCAST</string>

    <string name="firebase_ref_products">Products</string>
    <string name="firebase_ref_shops">Shops</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_shop_list">Shops</string>
    <string name="title_activity_shop_map">Shops Map</string>
    <string name="title_activity_product_list">Shopping List</string>
    <string name="title_activity_product_edit">EditActivity</string>

    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_login">Log In</string>
    <string name="login_hint_logout">Log Out</string>
    <string name="login_hint_create">Create Account</string>

    <string name="btn_showShopsList">Shops</string>
    <string name="btn_showShopsMap">Shops Map</string>
    <string name="btn_showShoppingList">Shopping List</string>
    <string name="btn_showSettings">Settings</string>

    <string name="appSettings_allowProductAdd">allowProductAdd</string>
    <string name="appSettings_allowProductAdd_title">Allow adding items</string>
    <string name="appSettings_allowProductEdit">allowProductEdit</string>
    <string name="appSettings_allowProductEdit_title">Allow editing items</string>

    <string name="product_price_label">Price:</string>
    <string name="product_qty_label">Qty:</string>

    <string name="product_edit_hint_name">Product Name</string>
    <string name="product_edit_hint_price">Price</string>
    <string name="product_edit_hint_qty">Quantity</string>
    <string name="product_edit_label_bought">Bought:</string>

    <string name="shop_list_radius_label">Radius:</string>

    <string name="shop_edit_hint_name">Shop Name</string>
    <string name="shop_edit_hint_description">Description</string>
    <string name="shop_edit_hint_url">Url</string>
    <string name="shop_edit_hint_latitude">Latitude</string>
    <string name="shop_edit_hint_longitude">Longitude</string>
    <string name="shop_edit_hint_radius">Radius</string>

    <string name="btn_Save">Save</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_find_nearest">Find Nearest</string>

    <string name="shop_default_radius">100</string>

</resources>
