<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityDefault"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login_email"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            style="@style/EditTextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/layout_loginButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_logIn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hint_login" />

            <Button
                android:id="@+id/btn_createAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hint_create" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logOut"
            style="@style/ButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_logout"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/btn_showShopsList"
            android:background="@color/buttonOk"
            style="@style/ButtonMain"
            android:text="@string/btn_showShopsList" />

        <Button
            android:id="@+id/btn_showShopsMap"
            android:background="@color/grey_500"
            style="@style/ButtonMain"
            android:text="@string/btn_showShopsMap" />

        <Button
            android:id="@+id/btn_showShoppingList"
            style="@style/ButtonMain"
            android:text="@string/btn_showShoppingList" />

        <Button
            android:id="@+id/btn_showSettings"
            style="@style/ButtonDefault"
            android:text="@string/btn_showSettings" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>